added classes page, bio of teachers

--- a/classes/index.html
+++ b/classes/index.html
@@ -33,7 +33,16 @@
   <section class="history-classes">
     <div class="history-container classes-container">
       <h1>New York City</h1>
-      <h2>Tuesday evenings from 6pm to 8pm. $150 (6 classes)</h2>
+      <h2>Tuesday evenings from 6pm to 8pm.</h2>
+      <p>For students with some experience. Please inquire if you are interested.
+      We are currently working on the Slow form, Fajin form, Hard form (Hao) and Push Hands.
+      Visitors may attend and pay a per class fee of $35.</p>
+      <h2>Thursday evenings 7 pm to 8:30 pm</h2>
+      <p>New students must sign up for the first cycle/4 classes-$90 or first two cycles/8 classes for $150.
+      <br>From 7 pm to 7:30 pm: Warm ups, Stretching, Qigong and Meditation.
+      <br>From 7:30 pm to 8:30 pm: Basic Taiji training and starting Taiji form.</p>
+      <h2>Monthly workshop</h2>
+      <p>There’s a Sunday workshop once a month for students with experience. Please inquire for dates and location. Private lessons are also available by Master Alex Dong and senior students.</p>
       <a href="https://www.google.com/maps/place/440+Studios/@40.729541,-73.992244,15z/data=!4m2!3m1!1s0x0:0x38d9b08a7982056e" target="_blank"><p>440 Studios<br>440 Lafayette Sreet, New York NY 10003.</a><br>Directly across from the public theater, between Astor Place and 4th Street. Subway 8th st. on the W, R trains, and Astor Place on the 6 trains.</p>
       <h3>For more information, please email <a href="mailto:alexdongtaiji@hotmail.com">alexdongtaiji@hotmail.com.</a></h3>
     </div>
@@ -43,30 +52,32 @@
     <div class="america-container">
       <h2>United States</h2>
       <ul class="classes-ul">
-        <li><a href="#">Santa Barbara, California</a></li>
-        <li><a href="#">Colorado And Utah Borders</a></li>
-        <li><a href="#">Honolulu, Hawaii</a></li>
-        <li><a href="#">White Birds, Idaho</a></li>
-        <li><a href="#">Syracuse, New York</a></li>
-        <li><a href="#">Windham, New Hampshire</a></li>
-        <li><a href="#">Lake Chelan, Washington</a></li>
-        <li><a href="#">Thurston County, Washington</a></li>
+        <li><a href="carmelvalley/">Carmel Valley, California</a></li>
+        <li><a href="santabarbara/">Santa Barbara, California</a></li>
+        <li><a href="coloradoutah/">Colorado And Utah Borders</a></li>
+        <li><a href="oahu/">Honolulu, Hawaii</a></li>
+        <li><a href="whitebirds/">White Birds, Idaho</a></li>
+        <li><a href="longisland/">Long Island, New York</a></li>
+        <li><a href="syracuse/">Syracuse, New York</a></li>
+        <li><a href="windham/">Windham, New Hampshire</a></li>
+        <li><a href="lakechelan/">Lake Chelan, Washington</a></li>
+        <li><a href="thurstoncounty/">Thurston County, Washington</a></li>
       </ul>
       <h2>Canada</h2>
       <ul class="classes-ul">
-        <li><a href="#">New Brunswick</a></li>
-        <li><a href="#">Quebec</a></li>
+        <li><a href="newbrunswick">New Brunswick</a></li>
+        <li><a href="quebec">Quebec</a></li>
       </ul>
 
       <h2 class="rest-of-the-world">Europe and South America</h1>
       <ul class="classes-ul">
-        <li><a href="#">Belo Horizonte, Brazil</a></li>
-        <li><a href="#">Zagreb, Croatia</a></li>
-        <li><a href="#">Prague, Czech Republic</a></li>
-        <li><a href="#">London, England</a></li>
-        <li><a href="#">Grenobble, France</a></li>
-        <li><a href="#">Athens, Greece</a></li>
-        <li><a href="#">Siena, Italy</a></li>
+        <li><a href="belohorizonte">Belo Horizonte, Brazil</a></li>
+        <li><a href="zagreb">Zagreb, Croatia</a></li>
+        <li><a href="prague">Prague, Czech Republic</a></li>
+        <li><a href="london">London, England</a></li>
+        <li><a href="grenobble">Grenobble, France</a></li>
+        <li><a href="athens">Athens, Greece</a></li>
+        <li><a href="siena">Siena, Italy</a></li>
       </ul>
     </div>
    </section>
