--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <h2>Tuesday evenings from 6pm to 8pm. $150 (6 classes)</h2>
       <p>440 Studios<br>440 Lafayette Sreet, New York NY 10003.<br>Directly across from the public theater, between Astor Place and 4th Street. Subway 8th st. on the W, R trains, and Astor Place on the 6 trains.</p>
       <h3>For more information, please email <a href="mailto:alexdongtaiji@hotmail.com">alexdongtaiji@hotmail.com.</a></h3>
-      <h3>For classes around the world, please <a href="#">click here.</a></h3>
+      <h3>For classes around the world, please <a href="classes/">click here.</a></h3>
     </div>
   </section>
 
