--- a/store/index.html
+++ b/store/index.html
@@ -31,38 +31,56 @@
     <h3>Purchase Books and DVDs Created By Master Alex Dong</h3>
   </div>
 
-  <section class="history-classes store-section">
+  <section class="history-classes store-section books-section">
     <div class="history-container store">
       <h1>Books</h1>
 
       <div class="store-book-container">
-        <h3>Red Book</h3>
-        <h4>$35.00</h4>
-        <img src="../assets/images/redbook.png">
+        <h3>Red Book (Chinese)</h3>
+        <h4>$50.00</h4>
+        <a href="#redbook-popup" class="animated_popup"><img src="../assets/images/redbook.png"></a>
         <h5><a href="#redbook-popup" class="animated_popup book-details-link">Book Details</a></h5>
-        <div id="redbook-popup" style="display:none">
+        <div id="redbook-popup" style="display:none" class="book-details-popup">
+          <h3>Red Book (Chinese)</h3>
           <p>Taiji can be practiced while walking, standing or lying down. Always use Taiji principles and work on Taiji, in any situation. For example, try to pick up a cup or glass using a lot of energy and then with very little. Pay attention while walking, are your steps heavy or light? Compare standing with knees locked and then bent, with hips relaxed or on one foot versus both. These are all excellent learning experiences.</p>
         </div>
+        <h6><a href="#" class="paypal-link">Purchase</a></h6>
+      </div>
+
+      <div class="store-book-container">
+        <h3>Red Book (English)</h3>
+        <h4>$35.00</h4>
+        <a href="#redbookenglish-popup" class="animated_popup"><img src="../assets/images/redbook.png"></a>
+        <h5><a href="#redbookenglish-popup" class="animated_popup book-details-link">Book Details</a></h5>
+        <div id="redbookenglish-popup" style="display:none">
+          <h3>Red Book (English)</h3>
+          <p>A translation into English of Tung Ying Jie's famous Red Book book has been completed by Master Alex Dong. The parts of the original that describe the postures are not included in the translation.</p>
+        </div>
+        <h6><a href="#" class="paypal-link">Purchase</a></h6>
       </div>
 
       <div class="store-book-container">
         <h3>Workshop Notes</h3>
-        <h4>$35.00</h4>
-        <img src="../assets/images/workshopnotes.png">
+        <h4>$50.00</h4>
+        <a href="#workshop-popup" class="animated_popup"><img src="../assets/images/workshopnotes.png"></a>
         <h5><a href="#workshop-popup" class="animated_popup book-details-link">Book Details</a></h5>
         <div id="workshop-popup" style="display:none">
+          <h3>Workshop Notes</h3>
           <p>Master Alex Dong's new book, Taijiquan Explained - Workshop Notes is the most clearly written book on taijiquan that I have read. These are real notes from his real workshops over the past few years, I know because I was at many of them. His generosity in sharing the information in these notes with the greater Taiji community, not just his students, took courage and is unprecedented in his family and most masters in general. I can't recommend this book enough. I have it with me all the time, I quote it all the time, my students are quoting it all the time. - Toni DeMoulin</p>
         </div>
+        <h6><a href="#" class="paypal-link">Purchase</a></h6>
       </div>
 
       <div class="store-book-container">
         <h3>Taichi Explained</h3>
-        <h4>$35.00</h4>
-        <img src="../assets/images/taichiexplained.png">
+        <h4>$45.00</h4>
+        <a href="#taichiexplained-popup" class="animated_popup"><img src="../assets/images/taichiexplained.png"></a>
         <h5><a href="#taichiexplained-popup" class="animated_popup book-details-link">Book Details</a></h5>
         <div id="taichiexplained-popup" style="display:none">
+          <h3>Taichi Explained</h3>
           <p>This book includes many fundamentals on the body, mind and energies. Pictures (color) and instructions of every move in the slow form. There is also a section call the "Often Misunderstood", "Understand in Depth" and a chapter just on Push Hands training and strategies. A must have for new students who just learning or those who wants to improve their Slow Form. Great for the more advanced students to learn more about Push Hands and understand more depth.</p>
         </div>
+        <h6><a href="#" class="paypal-link">Purchase</a></h6>
       </div>
 
     </div>
@@ -73,61 +91,104 @@
       <h1>DVDs</h1>
 
       <div class="store-book-container">
+        <h3>Hong Kong 2006</h3>
+        <h4>$65.00</h4>
+        <a href="#hongkong-popup" class="animated_popup"><img src="../assets/images/tape7.png"></a>
+        <h5><a href="#hongkong-popup" class="animated_popup book-details-link">Book Details</a></h5>
+        <div id="hongkong-popup" style="display:none">
+          <h3>Hong Kong 2006</h3>
+          <p>Master Alex Dong has produced an extraordinary series of demonstration videos, and all three are available in DVD format, and include full length demonstrations and describe the benefits of each form. Along with music soundtrack, the video captures the essence of Master Alex's softness and mastery through close-ups of his hands and face.</p>
+        </div>
+        <h6><a href="#" class="paypal-link">Purchase</a></h6>
+      </div>
+
+      <div class="store-book-container">
+        <h3>Yang Style Slow V1 & 2</h3>
+        <h4>$50.00</h4>
+        <a href="#yangstyle-popup" class="animated_popup"><img src="../assets/images/tape8.png"></a>
+        <h5><a href="#yangstyle-popup" class="animated_popup book-details-link">Book Details</a></h5>
+        <div id="yangstyle-popup" style="display:none">
+          <h3>Yang Style Slow V1 & 2</h3>
+          <p>With a new space saving version of the Slow Set that requires only two thirds of the space.</p>
+        </div>
+        <h6><a href="#" class="paypal-link">Purchase</a></h6>
+      </div>
+
+      <div class="store-book-container">
         <h3>Dong Slow And Fast Set</h3>
         <h4>$30.00</h4>
-        <img src="../assets/images/tape1.png">
+        <a href="#dongslowfast-popup" class="animated_popup"><img src="../assets/images/tape1.png"></a>
         <h5><a href="#dongslowfast-popup" class="animated_popup book-details-link">Book Details</a></h5>
         <div id="dongslowfast-popup" style="display:none">
+          <h3>Dong Slow And Fast Set</h3>
           <p>This DVD covers the Dong Family Slow Set (Orthodox style) and Dong Family Fast Form (slow & fast versions). Total running time: 42:42</p>
         </div>
+        <h6><a href="#" class="paypal-link">Purchase</a></h6>
       </div>
+
       <div class="store-book-container">
         <h3>Hao Style and Fa-Jing</h3>
         <h4>$50.00</h4>
-        <img src="../assets/images/tape2.png">
+        <a href="#haostyle-popup" class="animated_popup"><img src="../assets/images/tape2.png"></a>
         <h5><a href="#haostyle-popup" class="animated_popup book-details-link">Book Details</a></h5>
         <div id="haostyle-popup" style="display:none">
+          <h3>Hao Style and Fa-Jing</h3>
           <p>Includes the Dong Family Hard Form (traditional Hao style), and the Dong Family Fa-Jing form (slow & fast) which was created by Alex's great grandfather. Total running time: 34:38</p>
         </div>
+        <h6><a href="#" class="paypal-link">Purchase</a></h6>
       </div>
+
       <div class="store-book-container">
         <h3>Weapons Set</h3>
         <h4>$65.00</h4>
-        <img src="../assets/images/tape3.png">
+        <a href="#weapons-popup" class="animated_popup"><img src="../assets/images/tape3.png"></a>
         <h5><a href="#weapons-popup" class="animated_popup book-details-link">Book Details</a></h5>
         <div id="weapons-popup" style="display:none">
+          <h3>Weapons Set</h3>
           <p>Sabre, advanced sabre, sword, sticks, and spear forms feature on this DVD and all forms are demonstrated in full, providing a rare insight into advanced taiji practice. Total running time: 37:17</p>
         </div>
+        <h6><a href="#" class="paypal-link">Purchase</a></h6>
       </div>
+
       <div class="store-book-container">
         <h3>Dong History Tape</h3>
         <h4>$65.00</h4>
-        <img src="../assets/images/tape4.png">
+        <a href="#donghistory-popup" class="animated_popup"><img src="../assets/images/tape4.png"></a>
         <h5><a href="#donghistory-popup" class="animated_popup book-details-link">Book Details</a></h5>
         <div id="donghistory-popup" style="display:none">
+          <h3>Dong History Tape</h3>
           <p>Follow the history of Four Generations of the Dong Family, featuring Dong (Tung) Ying Chieh, Dong Hu (Tung Fu) Ling, and Dong Zeng Chen performing the 108 sequence form of the Traditional Yang Style Tai Chi Chuan.</p>
         </div>
+        <h6><a href="#" class="paypal-link">Purchase</a></h6>
       </div>
+
       <div class="store-book-container">
         <h3>Three Treasures</h3>
         <h4>$30.00</h4>
-        <img src="../assets/images/tape5.png">
+        <a href="#threetreasures-popup" class="animated_popup"><img src="../assets/images/tape5.png"></a>
         <h5><a href="#threetreasures-popup" class="animated_popup book-details-link">Book Details</a></h5>
         <div id="threetreasures-popup" style="display:none">
+          <h3>Three Treasures</h3>
           <p>Peng, Lu, Ze, An - Hard Qi Gong - Taiji Gong.</p>
         </div>
+        <h6><a href="#" class="paypal-link">Purchase</a></h6>
       </div>
+
       <div class="store-book-container">
         <h3>Dong Fast & Fajin</h3>
         <h4>$40.00</h4>
-        <img src="../assets/images/tape6.png">
-        <h5><a href="#dongslowfast-popup" class="animated_popup book-details-link">Book Details</a></h5>
-        <div id="dongslowfast-popup" style="display:none">
+        <a href="#dongfastfajin-popup" class="animated_popup"><img src="../assets/images/tape6.png"></a>
+        <h5><a href="#dongfastfajin-popup" class="animated_popup book-details-link">Book Details</a></h5>
+        <div id="dongfastfajin-popup" style="display:none">
+          <h3>Dong Fast & Fajin</h3>
           <p>A updated version of the Dong Family Fast Form with the Dong Family Fajin Form.</p>
         </div>
+        <h6><a href="#" class="paypal-link">Purchase</a></h6>
       </div>
 
     </div>
+
+    <h3>For more information, please email <a href="mailto:alexdongtaiji@hotmail.com">alexdongtaiji@hotmail.com.</a></h3>
   </section>
 
   <footer>
@@ -142,6 +203,7 @@
       </ul>
     </nav>
   </footer>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
   <script src="../assets/js/jquery.popup.js"></script>
   <script>
