made page responsive, added bg images for homepage

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
   </section>
 
-  <section class="history-red">
+  <section class="history-red bg-image">
     <div class="history-container">
       <h1>He started teaching at the age of 15 with his father</h1>
       <p>where he assisted him in translation from Chinese to English during classes. In 1990 he started a class of his own in Hawaii, and has continued to teach ever since. In 2003, he relocated to New York City where he established his new school, the Alex Dong International Taijiquan Association. Genuine principles of taijiquan are taught and through that teaching Master Dong wants to spread and popularize the art of Taijiquan.</p>
@@ -50,7 +50,7 @@
     </div>
   </section>
 
-  <section class="history-red">
+  <section class="history-red bg-image2">
     <div class="history-container">
       <h1>He founded the Tung Ying Jie Taiji Legacy in honour of his great-grandfather</h1>
       <p>To keep the traditions of the Dong family style alive and to recognize Tung Ying Jie Taiji as one of the most important practitioners in Taiji history. Master Dong translated a large part of Tung Ying Jie's book titled Taijiquan Explained commonly referred to as The Red Book.</p>
@@ -66,11 +66,19 @@
 
   <section class="history-classes">
     <div class="history-container">
-      <h1>Classes</h1>
-      <h2>Tuesday evenings from 6pm to 8pm. $150 (6 classes)</h2>
-      <p>440 Studios<br>440 Lafayette Sreet, New York NY 10003.<br>Directly across from the public theater, between Astor Place and 4th Street. Subway 8th st. on the W, R trains, and Astor Place on the 6 trains.</p>
+      <h1>Classes (New York, NY)</h1>
+      <h2>Tuesday evenings from 6pm to 8pm.</h2>
+      <p>For students with some experience. Please inquire if you are interested.
+      We are currently working on the Slow form, Fajin form, Hard form (Hao) and Push Hands.
+      Visitors may attend and pay a per class fee of $35.</p>
+      <h2>Thursday evenings 7 pm to 8:30 pm</h2>
+      <p>New students must sign up for the first cycle/4 classes-$90 or first two cycles/8 classes for $150.
+      <br>From 7 pm to 7:30 pm: Warm ups, Stretching, Qigong and Meditation.
+      <br>From 7:30 pm to 8:30 pm: Basic Taiji training and starting Taiji form.</p>
+      <h2>Monthly workshop</h2>
+      <p>There’s a Sunday workshop once a month for students with experience. Please inquire for dates and location. Private lessons are also available by Master Alex Dong and senior students.</p>
+      <a href="https://www.google.com/maps/place/440+Studios/@40.729541,-73.992244,15z/data=!4m2!3m1!1s0x0:0x38d9b08a7982056e" target="_blank"><p>440 Studios<br>440 Lafayette Sreet, New York NY 10003.</a><br>Directly across from the public theater, between Astor Place and 4th Street. Subway 8th st. on the W, R trains, and Astor Place on the 6 trains.</p>
       <h3>For more information, please email <a href="mailto:alexdongtaiji@hotmail.com">alexdongtaiji@hotmail.com.</a></h3>
-      <h3>For classes around the world, please <a href="classes/">click here.</a></h3>
     </div>
   </section>
 
