--- a/classes/belohorizonte/index.html
+++ b/classes/belohorizonte/index.html
@@ -41,10 +41,10 @@
           <p>Dong Style has changed totally her perspective about Tai Chi Chuan and her goals to improve herself, getting deep into her practice and share her learning. In 2010, she started teaching: an honor and an opportunity to contribute in the spread and growth of this art.</p>
         </div>
       <p>Location: - Rua Congonhas, 700 sala 101 Bairro Santo Antonio BH
-      Location: Grupo Ramal, Praca Ramatis, 161 - Parque Riachuelo BH
-      Classes: Mondays and Wednesdays from 20:30 to 21:30
-      Location: Al. Serra da Mantiqueira, 1398 Vila del Rey Nova Lima
-      Classes: Tuesdays and Fridays from 19:00 to 20:00</p>
+      <br>Location: Grupo Ramal, Praca Ramatis, 161 - Parque Riachuelo BH
+      <br>Classes: Mondays and Wednesdays from 20:30 to 21:30
+      <br>Location: Al. Serra da Mantiqueira, 1398 Vila del Rey Nova Lima
+      <br>Classes: Tuesdays and Fridays from 19:00 to 20:00</p>
 
       <p>Contact: <a href="mailto:contato@sandrarruda.fot.br">contato@sandrarruda.fot.br</a>
       <br>Website: <a href="http://projetosentidos.wordpress.com" target="_blank">projetosentidos.wordpress.com</a></p>
