added paypal links to purchase buttons

--- a/store/index.html
+++ b/store/index.html
@@ -44,7 +44,11 @@
           <h3>Red Book (Chinese)</h3>
           <p>Taiji can be practiced while walking, standing or lying down. Always use Taiji principles and work on Taiji, in any situation. For example, try to pick up a cup or glass using a lot of energy and then with very little. Pay attention while walking, are your steps heavy or light? Compare standing with knees locked and then bent, with hips relaxed or on one foot versus both. These are all excellent learning experiences.</p>
         </div>
-        <h6><a href="#" class="paypal-link">Purchase</a></h6>
+        <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+        <input type="hidden" name="cmd" value="_s-xclick">
+        <input type="hidden" name="hosted_button_id" value="8DNBPMGQY57RQ">
+        <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
+        </form></h6>
       </div>
 
       <div class="store-book-container">
@@ -56,7 +60,11 @@
           <h3>Red Book (English)</h3>
           <p>A translation into English of Tung Ying Jie's famous Red Book book has been completed by Master Alex Dong. The parts of the original that describe the postures are not included in the translation.</p>
         </div>
-        <h6><a href="#" class="paypal-link">Purchase</a></h6>
+        <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+        <input type="hidden" name="cmd" value="_s-xclick">
+        <input type="hidden" name="hosted_button_id" value="TTYVT6UXB6528">
+        <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
+        </form></h6>
       </div>
 
       <div class="store-book-container">
@@ -68,7 +76,11 @@
           <h3>Workshop Notes</h3>
           <p>Master Alex Dong's new book, Taijiquan Explained - Workshop Notes is the most clearly written book on taijiquan that I have read. These are real notes from his real workshops over the past few years, I know because I was at many of them. His generosity in sharing the information in these notes with the greater Taiji community, not just his students, took courage and is unprecedented in his family and most masters in general. I can't recommend this book enough. I have it with me all the time, I quote it all the time, my students are quoting it all the time. - Toni DeMoulin</p>
         </div>
-        <h6><a href="#" class="paypal-link">Purchase</a></h6>
+        <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+        <input type="hidden" name="cmd" value="_s-xclick">
+        <input type="hidden" name="hosted_button_id" value="37RLRFE3NRQ2J">
+        <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
+        </form></h6>
       </div>
 
       <div class="store-book-container">
@@ -80,7 +92,11 @@
           <h3>Taichi Explained</h3>
           <p>This book includes many fundamentals on the body, mind and energies. Pictures (color) and instructions of every move in the slow form. There is also a section call the "Often Misunderstood", "Understand in Depth" and a chapter just on Push Hands training and strategies. A must have for new students who just learning or those who wants to improve their Slow Form. Great for the more advanced students to learn more about Push Hands and understand more depth.</p>
         </div>
-        <h6><a href="#" class="paypal-link">Purchase</a></h6>
+        <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+        <input type="hidden" name="cmd" value="_s-xclick">
+        <input type="hidden" name="hosted_button_id" value="ZKSZ8SWJVKSC8">
+        <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
+        </form></h6>
       </div>
 
     </div>
@@ -99,7 +115,11 @@
           <h3>Hong Kong 2006</h3>
           <p>Master Alex Dong has produced an extraordinary series of demonstration videos, and all three are available in DVD format, and include full length demonstrations and describe the benefits of each form. Along with music soundtrack, the video captures the essence of Master Alex's softness and mastery through close-ups of his hands and face.</p>
         </div>
-        <h6><a href="#" class="paypal-link">Purchase</a></h6>
+        <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+        <input type="hidden" name="cmd" value="_s-xclick">
+        <input type="hidden" name="hosted_button_id" value="CYS2ZQFCB6NME">
+        <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
+        </form></h6>
       </div>
 
       <div class="store-book-container">
@@ -111,7 +131,11 @@
           <h3>Yang Style Slow V1 & 2</h3>
           <p>With a new space saving version of the Slow Set that requires only two thirds of the space.</p>
         </div>
-        <h6><a href="#" class="paypal-link">Purchase</a></h6>
+        <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+        <input type="hidden" name="cmd" value="_s-xclick">
+        <input type="hidden" name="hosted_button_id" value="FD5LB7S3D9J5S">
+        <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
+        </form></h6>
       </div>
 
       <div class="store-book-container">
@@ -123,7 +147,11 @@
           <h3>Dong Slow And Fast Set</h3>
           <p>This DVD covers the Dong Family Slow Set (Orthodox style) and Dong Family Fast Form (slow & fast versions). Total running time: 42:42</p>
         </div>
-        <h6><a href="#" class="paypal-link">Purchase</a></h6>
+        <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+        <input type="hidden" name="cmd" value="_s-xclick">
+        <input type="hidden" name="hosted_button_id" value="CE3JUGH5GVC5J">
+        <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
+        </form></h6>
       </div>
 
       <div class="store-book-container">
@@ -135,7 +163,11 @@
           <h3>Hao Style and Fa-Jing</h3>
           <p>Includes the Dong Family Hard Form (traditional Hao style), and the Dong Family Fa-Jing form (slow & fast) which was created by Alex's great grandfather. Total running time: 34:38</p>
         </div>
-        <h6><a href="#" class="paypal-link">Purchase</a></h6>
+        <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+        <input type="hidden" name="cmd" value="_s-xclick">
+        <input type="hidden" name="hosted_button_id" value="4K4TTRE4Q9Z64">
+        <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
+        </form></h6>
       </div>
 
       <div class="store-book-container">
@@ -147,7 +179,11 @@
           <h3>Weapons Set</h3>
           <p>Sabre, advanced sabre, sword, sticks, and spear forms feature on this DVD and all forms are demonstrated in full, providing a rare insight into advanced taiji practice. Total running time: 37:17</p>
         </div>
-        <h6><a href="#" class="paypal-link">Purchase</a></h6>
+        <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+        <input type="hidden" name="cmd" value="_s-xclick">
+        <input type="hidden" name="hosted_button_id" value="PFLV7HTS8LSXJ">
+        <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
+        </form></h6>
       </div>
 
       <div class="store-book-container">
@@ -159,7 +195,11 @@
           <h3>Dong History Tape</h3>
           <p>Follow the history of Four Generations of the Dong Family, featuring Dong (Tung) Ying Chieh, Dong Hu (Tung Fu) Ling, and Dong Zeng Chen performing the 108 sequence form of the Traditional Yang Style Tai Chi Chuan.</p>
         </div>
-        <h6><a href="#" class="paypal-link">Purchase</a></h6>
+        <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+        <input type="hidden" name="cmd" value="_s-xclick">
+        <input type="hidden" name="hosted_button_id" value="ZYK8PUW7ZAMUJ">
+        <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
+        </form></h6>
       </div>
 
       <div class="store-book-container">
@@ -171,7 +211,11 @@
           <h3>Three Treasures</h3>
           <p>Peng, Lu, Ze, An - Hard Qi Gong - Taiji Gong.</p>
         </div>
-        <h6><a href="#" class="paypal-link">Purchase</a></h6>
+        <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+        <input type="hidden" name="cmd" value="_s-xclick">
+        <input type="hidden" name="hosted_button_id" value="WUQ2G6MTXGJJL">
+        <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
+        </form></h6>
       </div>
 
       <div class="store-book-container">
@@ -183,7 +227,11 @@
           <h3>Dong Fast & Fajin</h3>
           <p>A updated version of the Dong Family Fast Form with the Dong Family Fajin Form.</p>
         </div>
-        <h6><a href="#" class="paypal-link">Purchase</a></h6>
+        <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+        <input type="hidden" name="cmd" value="_s-xclick">
+        <input type="hidden" name="hosted_button_id" value="672TA6YKL6582">
+        <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
+        </form></h6>
       </div>
 
     </div>
