--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <header class="header-homepage">
     <nav class="nav-homepage">
       <ul class="nav-ul-homepage">
-        <li><a href="http://www.alexdongtaiji.com">Home</a></a></li>
-        <li><a target="_blank" href="http://alexdongtaiji.tumblr.com">Blog</a></li>
+        <li><a href="http://www.alexdongtaichi.com">Home</a></a></li>
+        <li><a target="_blank" href="http://alexdongtaichi.tumblr.com">Blog</a></li>
         <li><a href="classes/">Classes</a></li>
         <li><a href="legacy/">Legacy</a></li>
         <li><a class="workshop-highlight" href="workshops/">Workshops</a></li>
@@ -25,7 +25,7 @@
     </nav>
     <div class="homepage-header-text">
       <h1>Master Alex Dong</h1>
-      <h2>Fourth Generation Taijiquan Master</h2>
+      <h2>Fourth Generation Taichi Chuan Master</h2>
     </div>
   </header>
 
@@ -85,8 +85,8 @@
   <footer>
     <nav class="footer-homepage">
       <ul class="footer-ul-homepage">
-        <li><a href="http://www.alexdongtaiji.com">Home</a></a></li>
-        <li><a target="_blank" href="http://alexdongtaiji.tumblr.com">Blog</a></li>
+        <li><a href="http://www.alexdongtaichi.com">Home</a></a></li>
+        <li><a target="_blank" href="http://alexdongtaichi.tumblr.com">Blog</a></li>
         <li><a href="classes/">Classes</a></li>
         <li><a href="legacy/">Legacy</a></li>
         <li><a href="workshops/">Workshops</a></li>
