--- a/classes/index.html
+++ b/classes/index.html
@@ -15,8 +15,8 @@
   <header class="header-classes">
     <nav class="nav-homepage">
       <ul class="nav-ul-homepage">
-        <li><a href="http://www.alexdongtaiji.com">Home</a></a></li>
-        <li><a target="_blank" href="http://alexdongtaiji.tumblr.com">Blog</a></li>
+        <li><a href="http://www.alexdongtaichi.com">Home</a></a></li>
+        <li><a target="_blank" href="http://alexdongtaichi.tumblr.com">Blog</a></li>
         <li><a href="../classes/">Classes</a></li>
         <li><a href="../legacy/">Legacy</a></li>
         <li><a class="workshop-highlight" href="../workshops/">Workshops</a></li>
@@ -44,7 +44,7 @@
       <h2>Monthly workshop</h2>
       <p>There’s a Sunday workshop once a month for students with experience. Please inquire for dates and location. Private lessons are also available by Master Alex Dong and senior students.</p>
       <a href="https://www.google.com/maps/place/440+Studios/@40.729541,-73.992244,15z/data=!4m2!3m1!1s0x0:0x38d9b08a7982056e" target="_blank"><p>440 Studios<br>440 Lafayette Sreet, New York NY 10003.</a><br>Directly across from the public theater, between Astor Place and 4th Street. Subway 8th st. on the W, R trains, and Astor Place on the 6 trains.</p>
-      <h3>For more information, please email <a href="mailto:alexdongtaiji@hotmail.com">alexdongtaiji@hotmail.com.</a></h3>
+      <h3>For more information, please email <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com.</a></h3>
     </div>
   </section>
 
@@ -85,8 +85,8 @@
   <footer>
     <nav class="footer-homepage">
       <ul class="footer-ul-homepage">
-        <li><a href="http://www.alexdongtaiji.com">Home</a></a></li>
-        <li><a target="_blank" href="http://alexdongtaiji.tumblr.com">Blog</a></li>
+        <li><a href="http://www.alexdongtaichi.com">Home</a></a></li>
+        <li><a target="_blank" href="http://alexdongtaichi.tumblr.com">Blog</a></li>
         <li><a href="../classes/">Classes</a></li>
         <li><a href="../legacy/">Legacy</a></li>
         <li><a href="../workshops/">Workshops</a></li>
