--- a/workshops/index.html
+++ b/workshops/index.html
@@ -46,7 +46,7 @@
 
       <p>This camp has no indoor sleeping arrangements; everyone has to bring their own tent and bedding for camping, and personal things like towel, soap, shampoo, sun block, hat and flip flops. Keep in mind late night temperature could drop down to freezing. Meals, showers, washing machine and two flushing toilets along with dining and training halls are provided.</p>
 
-      <p>Contact: Alex Dong <a href="mailto:alexdongtaiji@hotmail.com">alexdongtaiji@hotmail.com</a></p>
+      <p>Contact: Alex Dong <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a></p>
 
       <p><a href="http://www.alexdongtaichi.com/westwater2015/Westwater2015.docx" target="_blank">Download a booking form</a></p>
       </div>
