--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <h2>Monthly workshop</h2>
       <p>There’s a Sunday workshop once a month for students with experience. Please inquire for dates and location. Private lessons are also available by Master Alex Dong and senior students.</p>
       <a href="https://www.google.com/maps/place/440+Studios/@40.729541,-73.992244,15z/data=!4m2!3m1!1s0x0:0x38d9b08a7982056e" target="_blank"><p>440 Studios<br>440 Lafayette Sreet, New York NY 10003.</a><br>Directly across from the public theater, between Astor Place and 4th Street. Subway 8th st. on the W, R trains, and Astor Place on the 6 trains.</p>
-      <h3>For more information, please email <a href="mailto:alexdongtaiji@hotmail.com">alexdongtaiji@hotmail.com.</a></h3>
+      <h3>For more information, please email <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com.</a></h3>
     </div>
   </section>
 
