--- a/store/index.html
+++ b/store/index.html
@@ -16,8 +16,8 @@
   <header class="header-classes">
     <nav class="nav-homepage">
       <ul class="nav-ul-homepage">
-        <li><a href="http://www.alexdongtaiji.com">Home</a></a></li>
-        <li><a target="_blank" href="http://alexdongtaiji.tumblr.com">Blog</a></li>
+        <li><a href="http://www.alexdongtaichi.com">Home</a></a></li>
+        <li><a target="_blank" href="http://alexdongtaichi.tumblr.com">Blog</a></li>
         <li><a href="../classes/">Classes</a></li>
         <li><a href="../legacy/">Legacy</a></li>
         <li><a class="workshop-highlight" href="../workshops/">Workshops</a></li>
@@ -236,14 +236,14 @@
 
     </div>
 
-    <h3>For more information, please email <a href="mailto:alexdongtaiji@hotmail.com">alexdongtaiji@hotmail.com.</a></h3>
+    <h3>For more information, please email <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com.</a></h3>
   </section>
 
   <footer>
     <nav class="footer-homepage">
       <ul class="footer-ul-homepage">
-        <li><a href="http://www.alexdongtaiji.com">Home</a></a></li>
-        <li><a target="_blank" href="http://alexdongtaiji.tumblr.com">Blog</a></li>
+        <li><a href="http://www.alexdongtaichi.com">Home</a></a></li>
+        <li><a target="_blank" href="http://alexdongtaichi.tumblr.com">Blog</a></li>
         <li><a href="../classes/">Classes</a></li>
         <li><a href="../legacy/">Legacy</a></li>
         <li><a href="../workshops/">Workshops</a></li>
